--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>SIT 725 Prac 3</title>
-    <meta name="description" content="basic template for SIT 725 Prac 3" />
+    <title>Dream Destinations</title>
+    <meta name="description" content="latest updates for Dream Destinations" />
     <meta name="author" content="SitePoint" />
 
-    <meta property="og:title" content="SIT 725 Prac 3" />
+    <meta property="og:title" content="Dream Destinations" />
     <meta property="og:type" content="website" />
     <meta
       property="og:description"
-      content="basic template for SIT 725 Prac 3"
+      content="latest updates for Dream Destinations"
     />
 
     <!-- Compiled and minified CSS -->
@@ -49,11 +49,9 @@
       <div class="container">
         <div class="row">
           <div class="col s12 center-align">
-            <h1 id="heading">Welcome to SIT 725 Week 3</h1>
+            <h1 id="heading">Dream Destinations</h1>
             <p class="flow-text">
-              This is a demo application that tries to use a few components from
-              materialize and through this practical we try to have some fun
-              with Materialize and its components
+              Information about cool destinations around the world.
             </p>
           </div>
           <div class="col s12 center-align">
@@ -85,11 +83,9 @@
               </div>
               <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4"
-                  >Kitten<i class="material-icons right">close</i></span
+                  >Costa Rica<i class="material-icons right">close</i></span
                 >
-                <p class="card-text">
-                  Hello There! I just wanted to say HI to you guys. See ya!
-                </p>
+                <p class="card-text">Demo desciption about Costa Rica</p>
               </div>
             </div>
           </div>
@@ -101,24 +97,24 @@
           <form class="col s12">
             <div class="row">
               <div class="input-field col s6">
-                <input id="first_name" type="text" class="validate" />
-                <label for="first_name">First Name</label>
+                <input id="title" type="text" class="validate" />
+                <label for="title">Title</label>
               </div>
               <div class="input-field col s6">
-                <input id="last_name" type="text" class="validate" />
-                <label for="last_name">Last Name</label>
+                <input id="image" type="text" class="validate" />
+                <label for="image">Image</label>
               </div>
             </div>
             <div class="row">
               <div class="input-field col s12">
-                <input id="password" type="password" class="validate" />
-                <label for="password">Password</label>
+                <input id="link" type="text" class="validate" />
+                <label for="link">Link</label>
               </div>
             </div>
             <div class="row">
               <div class="input-field col s12">
-                <input id="email" type="email" class="validate" />
-                <label for="email">Email</label>
+                <input id="description" type="text" class="validate" />
+                <label for="description">Description</label>
               </div>
             </div>
             <div class="row">
