add delete functionality

--- a/public/index.html
+++ b/public/index.html
@@ -81,6 +81,14 @@
                 >
                 <p><a href="#">About Costa Rica</a></p>
               </div>
+              <div class="card-action">
+                <a
+                  class="waves-effect waves-light btn delete-btn"
+                  id="card-0"
+                  data-record-id="0"
+                  ><i class="material-icons left">delete</i>Delete</a
+                >
+              </div>
               <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4"
                   >Costa Rica<i class="material-icons right">close</i></span
